Header Layout Fix Layout Shifting while moving to big screen

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -97,7 +97,7 @@
 }
 
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 825px) {
     .headerMainContainer{
         .smallHeaderNavMainContainer{
             display: none;
